<resources>
    <string name="app_name">Csj Market</string>
    <string name="menu_home">Carrito</string>
    <string name="menu_voucher">Mis compras</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txtDocumento">Ingrese su número de documento</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>

    <string name="agregar">Agregar</string>

    <string name="connection">https://aplicaciones.comsanjuan.com/csjmarket</string>
    <string name="txtCorreo">Correo electrónico</string>
    <string name="txtNumeroDocumento">Número de documento</string>
    <string name="txtNombre">Nombre o Razón social</string>
    <string name="txtApellidoPaterno">Apellido paterno</string>
    <string name="txtApellidoMaterno">Apellido materno</string>
    <string name="txtNombres">Nombres</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtNumeroTelefono">Número de teléfono</string>
    <string name="action_settings">Acerca</string>

    <string-array name="docTypes">
        <item>DNI</item>
        <item>RUC</item>
    </string-array>

    <string-array name="departamentos">
        <item>LORETO</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="politicas">Políticas de privacidad</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="libroReclamaciones">Libro de reclamaciones</string>

    <string name="default_web_client_id">559809427977-jc4tr6nejgoaee12ssmr02rqtdsmldn1.apps.googleusercontent.com</string>
    <string name="todo">TODO</string>
    <string name="aviso_de_horario">Aviso de horario</string>
    <string name="no">No</string>
    <string name="s">Sí</string>
    <string name="todo_">TODO</string>
    <string name="todo_j">TODO</string>
    <string name="todo_p">TODO</string>
    <string name="b_squeda">Búsqueda</string>
    <string name="_0">0</string>
    <string name="todo_ph">TODO</string>
</resources>