<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_home"
            android:iconTintMode="screen"
            android:theme="@style/Menu1"/>
        <item
            android:id="@+id/nav_voucher"
            android:icon="@drawable/voucher"
            android:title="@string/menu_voucher"
            android:theme="@style/Menu1"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile"
            android:theme="@style/Menu1"/>
    </group>

    <group>
        <item
            android:id="@+id/nav_politicas"
            android:icon="@drawable/ic_baseline_local_police_24"
            android:title="@string/politicas"
            android:theme="@style/Menu1"/>
    </group>
</menu>