<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductosCategoria"
    android:fitsSystemWindows="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/vp_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">

        <ImageButton
            android:id="@+id/prov_btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_"
            android:padding="5dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_arrow_back_24" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/prov_imgProveedor"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/todo_j"
            android:scaleType="fitCenter"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo_p"
                    android:src="@drawable/ic_baseline_search_24" />

                <EditText
                    android:id="@+id/prov_txtBuscarProducto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/b_squeda"
                    android:inputType="textPersonName"
                    android:textSize="14sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/prov_rvListaProducto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </LinearLayout>

    <TextView
        android:id="@+id/prov_txtCarritoItemCount"
        android:visibility="gone"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/indicador"
        android:elevation="10dp"
        android:text="@string/_0"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/prov_fab"
        app:layout_anchorGravity="start|top" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/prov_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo_ph"
        app:backgroundTint="@color/secondary"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>